# pylib-template

./: CHANGELOG.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/workflows/: release-pr.yaml  release.yaml
docs/: README.md  releases.md
