[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",  # Hatch still includes `docs/README.md` if `project.readme` is set.
  "/tests",
  ".readthedocs.yaml",
  "CHANGELOG.md",
  "cliff.toml",
  "mkdocs.yml",
]


[tool.hatch.build.targets.wheel]
packages = ["src/pylib"]  # Mandatory if project name and module import name are different.


[project]
name = "pylib-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "author", email = "author@example.com" }
]
readme = "docs/README.md"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = []


[dependency-groups]
dev = [
    "mkdocs-material",
    "mkdocstrings-python",
    "pytest",
    "pytest-cov",
]


[project.urls]
Homepage = "https://github.com/dd-n-kk/pylib-template"
Documentation = "https://pylib-template.readthedocs.io"
Issues = "https://github.com/dd-n-kk/pylib-template/issues"
